@@ -18,18 +18,13 @@
 #if defined(_WIN32) || defined(UNIX_CYGWIN32)
 # define WIN32_LEAN_AND_MEAN  /* avoid including junk */
 # if defined(UNIX_CYGWIN32) || defined(__MINGW32__)
-/* `unused' is used in function declarations. */
-#  undef unused
 #  define ULONGLONG OS_ULONGLONG
 #  define ULONG OS_ULONG
 #  include <windows.h>
 #  undef ULONG
 #  undef ULONGLONG
-#  define unused (void)
 # else
-#  undef unused
 #  include <windows.h>
-#  define unused
 # endif
 #endif
 
